--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,7 +102,7 @@ header {
     top: -25px;
     left: -25px;
 
-    transition: translate 0.1s ease-out;
+    transition: translate 0.1s cubic-bezier(.23,.68,.57,.94);
     
     pointer-events: none;
    
@@ -131,6 +131,33 @@ header {
 img{
     border-radius: 20%;
 box-shadow: 3px 3px 5px rgba(28, 125, 125, 0.909);
+}
+
+/*---------PHOTOS PAGE DECORATION ---------*/
+.photos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pictures{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+}
+
+
+/*---------VIDEOS PAGE DECORATION ---------*/
+.videos{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 2rem;
+}
+.video-content{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 2rem;
+    align-items: center;
 }
 
 
