--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,8 @@ footer{
 .photos,
 .videos,
 .web,
-.game{
+.game
+.contact{
     display: none;
 }
 
@@ -180,6 +181,24 @@ box-shadow: 3px 3px 5px rgba(28, 125, 125, 0.909);
    
 }
 
+/*--------WEB PAGE DECORATION ---------------*/
+.web{
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 2rem;
+}
+
+
+/*--------CONTACT PAGE DECORATION ---------------*/
+.contact{
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 2rem;
+}
+.contact h3{
+    padding-bottom: 4rem;
+}
+
 
 
 /*=============RESPONSIVE SCREEN ===========*/
@@ -220,7 +239,7 @@ box-shadow: 3px 3px 5px rgba(28, 125, 125, 0.909);
         top: 11vh;
         left: 0;
         position: absolute;
-        height: 30vh;
+        height: 50vh;
         width: 100%;
         background-color:var(--color-for-phone-menu) ;
         color: white;
