--- a/CSS/style.css
+++ b/CSS/style.css
@@ -253,8 +253,8 @@ video{
     
 }
 .information{
-    height: 350px;
-    width: 250px;
+    height: 450px;
+    width: 350px;
     background-color: var(--color-for-contactBackground);
     border-radius: 10%;
 
@@ -269,6 +269,12 @@ video{
 }
 .information p{
     padding-bottom: 1.5rem;
+    height: 100px;
+    width: 250px;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    font-size: 1.2rem;
 }
 
 .contact a{
